@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Don't drop the inventory of items marked as 'no drop'
+ common/object.c
+Brendan Lally 2010-03-28
+
 Massive CRE improvements.
 Filters are now defined globally. Report window, to display things (will be improved soon).
 Nicolas Weeger 2010-03-27
